NN-5081 Removed jvmArgs MaxPermSize