@@ -91,7 +91,6 @@ tasks {
   test {
     minHeapSize = "512m"
     maxHeapSize = "1024m"
-    jvmArgs = listOf("-XX:MaxPermSize=512m")
     jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
   }
 }
